--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,6 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+objects_occ/background.blend filter=lfs diff=lfs merge=lfs -text
+objects_occ/background.obj filter=lfs diff=lfs merge=lfs -text
+static/room.glb filter=lfs diff=lfs merge=lfs -text
