--- a/.gitattributes
+++ b/.gitattributes
@@ -36,3 +36,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 objects_occ/background.blend filter=lfs diff=lfs merge=lfs -text
 objects_occ/background.obj filter=lfs diff=lfs merge=lfs -text
 static/room.glb filter=lfs diff=lfs merge=lfs -text
+static/tutorial.gif filter=lfs diff=lfs merge=lfs -text
